--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ colorama==0.4.4
 comm==0.1.4
 commonmark==0.9.1
 cycler==0.11.0
-dataclasses==0.8
+dataclasses
 decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
