--- a/requirements.txt
+++ b/requirements.txt
@@ -90,73 +90,72 @@ pyarrow==6.0.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.20
-pycryptodome==3.19.0
-pydantic==1.9.2
-pydeck==0.6.2
-Pygments==2.9.0
-Pympler==1.0.1
-pyparsing==2.4.7
-pyphen==0.11.0
-Pyrebase==3.0.27
-Pyrebase4==4.7.1
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-python-jwt==2.0.1
-pytz==2022.7.1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0.1
-pyzmq==22.1.0
-regex==2023.8.8
-replicate==0.7.0
-requests==2.27.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-rich==12.6.0
-rouge==1.0.1
-rsa==4.9
-sacremoses==0.0.53
-scikit-learn==0.24.2
-scipy==1.5.4
-seaborn==0.11.2
-semver==2.13.0
-Send2Trash==1.7.1
-sentencepiece==0.1.99
-six==1.15.0
-smmap==5.0.0
-statsmodels==0.12.2
-streamlit==1.10.0
-streamlit-extras==0.0.1
-streamlit-option-menu==0.3.6
-tenacity==8.2.2
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.6.2
-tensorflow-estimator==2.6.0
-termcolor==1.1.0
-terminado==0.10.1
-testpath==0.5.0
-textblob==0.17.1
-textstat==0.7.3
-threadpoolctl==3.1.0
-tokenizers==0.12.1
-toml==0.10.2
-toolz==0.12.0
-torch==1.10.2
-torchvision==0.11.3
-tornado==6.1
-tqdm==4.64.1
-traitlets==4.3.3
-transformers==4.18.0
-typing-extensions==3.7.4.3
-tzdata==2023.3
-tzlocal==4.2
-urllib3==1.26.16
-validators==0.20.0
-watchdog==2.3.1
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.3
-widgetsnbextension==3.6.5
-wrapt==1.12.1
-zipp==3.5.0
+pycryptodome
+pydantic
+pydeck
+Pygments
+Pympler
+pyparsing
+pyphen
+Pyrebase
+Pyrebase4
+pyrsistent
+python-dateutil
+python-jwt
+pytz
+pytz-deprecation-shim
+PyYAML
+pyzmq
+regex
+replicate
+requests
+requests-oauthlib
+requests-toolbelt
+rich
+rouge
+rsa
+sacremoses
+scikit-learn
+scipy
+seaborn
+semver
+Send2Trash
+sentencepiece
+six
+smmap
+statsmodels
+streamlit-extras
+streamlit-option-menu
+tenacity
+tensorboard
+tensorboard-data-server
+tensorboard-plugin-wit
+tensorflow
+tensorflow-estimator
+termcolor
+terminado
+testpath
+textblob
+textstat
+threadpoolctl
+tokenizers
+toml
+toolz
+torch
+torchvision
+tornado
+tqdm
+traitlets
+transformers
+typing-extensions
+tzdata
+tzlocal
+urllib3
+validators
+watchdog
+wcwidth
+webencodings
+Werkzeug
+widgetsnbextension
+wrapt
+zipp
