--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,18 @@
-absl-py==0.15.0
-altair==4.1.0
-argon2-cffi==20.1.0
-astunparse==1.6.3
-async-generator==1.10
-attrs==21.2.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-bleach==3.3.1
-blinker==1.5
-cached-property==1.5.2
-cachetools==4.2.4
-certifi==2023.7.22
-cffi==1.14.6
-charset-normalizer==2.0.12
-clang==5.0
-click==8.0.4
-cloudpickle==2.2.0
-colorama==0.4.4
-comm==0.1.4
-commonmark==0.9.1
-cycler==0.11.0
-dataclasses
-decorator==5.0.9
-defusedxml==0.7.1
-entrypoints==0.3
-filelock==3.4.1
-flatbuffers==1.12
-gast==0.4.0
-gcloud==0.18.3
-gitdb==4.0.9
-GitPython==3.1.20
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-googleapis-common-protos==1.56.3
-grpcio==1.48.2
-gym==0.25.2
-gym-notices==0.0.8
-h5py==3.1.0
-httplib2==0.22.0
-huggingface-hub==0.4.0
-idna==3.4
-importlib-metadata==4.8.3
-importlib-resources==5.4.0
-inflect==5.3.0
-ipykernel==5.5.5
-ipython==7.16.1
-ipython-genutils==0.2.0
-ipywidgets==7.8.0
-jedi==0.18.0
-Jinja2==3.0.1
-joblib==1.1.1
-jsonschema==3.2.0
-jupyter-client==6.2.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.1.5
-jws==0.1.3
-keras==2.6.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-Markdown==3.3.7
-MarkupSafe==2.0.1
-matplotlib==3.3.4
-mistune==0.8.4
-mlxtend==0.18.0
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-nltk==3.6.7
-notebook==6.4.0
-numpy==1.19.5
-oauth2client==4.1.3
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==21.0
-pandas==1.1.5
-pandocfilters==1.4.3
-parso==0.8.2
-patsy==0.5.3
-pickleshare==0.7.5
-Pillow==8.4.0
-plotly==5.18.0
-prometheus-client==0.11.0
-prompt-toolkit==3.0.19
-protobuf==3.19.6
-pyarrow==6.0.1
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.20
-pycryptodome
-pydantic
-pydeck
-Pygments
-Pympler
-pyparsing
-pyphen
-Pyrebase
-Pyrebase4
-pyrsistent
-python-dateutil
-python-jwt
-pytz
-pytz-deprecation-shim
-PyYAML
-pyzmq
-regex
-replicate
-requests
-requests-oauthlib
-requests-toolbelt
-rich
-rouge
-rsa
-sacremoses
-scikit-learn
-semver
-Send2Trash
-sentencepiece
-six
-smmap
-streamlit-extras
-streamlit-option-menu
-tenacity
-tensorboard
-tensorboard-data-server
-tensorboard-plugin-wit
-tensorflow
-tensorflow-estimator
-termcolor
-terminado
-testpath
-textblob
-textstat
-threadpoolctl
-tokenizers
-toml
-toolz
+pandas
+numpy
+pyrebase
 torch
-torchvision
-tornado
-tqdm
-traitlets
+joblib
 transformers
-typing-extensions
-tzdata
-tzlocal
-urllib3
-validators
-watchdog
-wcwidth
-webencodings
-Werkzeug
-widgetsnbextension
-wrapt
-zipp
+streamlit_option_menu
+plotly
+sentencepiece
+pickle
+sklearn
+textblob
+rouge
+string
+re
+inflect
+keras
+tensorflow
