--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,111 @@
-streamlit
-pyrebase
-pyrebase4
-torch
-joblib
-transformers
-streamlit-option-menu
-plotly
-sentencepiece
-scikit-learn
-textblob
-rouge
-inflect
-keras
-tensorflow
-textstat
+absl-py==2.0.0
+altair==5.1.2
+annotated-types==0.6.0
+astunparse==1.6.3
+attrs==23.1.0
+blinker==1.6.3
+cachetools==5.3.2
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.1
+click==8.1.7
+colorama==0.4.6
+cryptography==41.0.5
+Deprecated==1.2.14
+filelock==3.13.0
+flatbuffers==23.5.26
+fsspec==2023.10.0
+gast==0.5.4
+gcloud==0.18.3
+gitdb==4.0.11
+GitPython==3.1.40
+google-auth==2.23.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+googleapis-common-protos==1.61.0
+grpcio==1.59.0
+h5py==3.10.0
+httplib2==0.22.0
+huggingface-hub==0.17.3
+idna==3.4
+importlib-metadata==6.8.0
+inflect==7.0.0
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jwcrypto==1.5.0
+keras==2.14.0
+libclang==16.0.6
+Markdown==3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+ml-dtypes==0.2.0
+mpmath==1.3.0
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.1
+oauth2client==4.1.3
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==23.2
+pandas==2.1.2
+Pillow==10.1.0
+plotly==5.18.0
+protobuf==4.24.4
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pycryptodome==3.19.0
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydeck==0.8.1b0
+Pygments==2.16.1
+pyparsing==3.1.1
+pyphen==0.14.0
+Pyrebase4==4.7.1
+python-dateutil==2.8.2
+python-jwt==4.0.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.30.2
+regex==2023.10.3
+requests==2.29.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+rich==13.6.0
+rouge==1.0.1
+rpds-py==0.10.6
+rsa==4.9
+safetensors==0.4.0
+scikit-learn==1.3.2
+scipy==1.11.3
+sentencepiece==0.1.99
+six==1.16.0
+smmap==5.0.1
+streamlit==1.28.0
+streamlit-option-menu==0.3.6
+sympy==1.12
+tenacity==8.2.3
+termcolor==2.3.0
+textblob==0.17.1
+textstat==0.7.3
+threadpoolctl==3.2.0
+tokenizers==0.14.1
+toml==0.10.2
+toolz==0.12.0
+torch==2.1.0
+tornado==6.3.3
+tqdm==4.66.1
+transformers==4.34.1
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==1.26.18
+validators==0.22.0
+watchdog==3.0.0
+Werkzeug==3.0.1
+wrapt==1.14.1
+zipp==3.17.0
